--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 					  			<li><a href="texts/siryalove.html">Film Review: A Syrian Love Story</a></li>
 					  			<li><a href="texts/otherness.html">Counter-dictionary entry: Otherness</a></li>	
 					  			<li><a href="texts/blackout.html">Short Story: #BlackoutGlowout</a></li>
-					  			
-					  			<li>        		
+					  			<li><a href="esp/cat.html">La Cuestión Catalana (castellano)</a>        		
 			  				</ul>	
 			  				</div>
 						
@@ -44,7 +43,7 @@
 						</div>
 					</div>
 				<div class="row">
-				<a style="font-weight: bold;font-family: roboto slab" href="">about</a></li>  
+				<a style="font-weight: bold;font-family: roboto slab" href="about/about.html">about</a></li>
 				<p><i>lucadoc9@gmail.com / 07541 925134</i></p>
 				</div>
 		</div>
