--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					  			<li><a href="texts/bigdata.html">Foucault´s Panopticon in the Era of Big Data Surveillance</a></li>
 					  			<li><a href="texts/Scott.html">Book Review: Brett Scott´s <i>Hacking the Future of Money</i> (2013)</a></li>
 					  			<li><a href="texts/arabmoney.html">Islamic Finance</a></li>
-					  			<li><a href="texts/Postdevelopment.html">Postdevelopment</a></li>
-					  			<li><a href="texts/Biocolonialism.html">Biocolonialism</a></li>
+					  			<li><a href="texts/postdevelopment.html">Postdevelopment</a></li>
+					  			<li><a href="texts/biocolonialism.html">Biocolonialism</a></li>
 					  			<li><a href="texts/Cerveza.html">Cerveza Beer Amigo</a></li>
 					  			<li><a href="texts/miyazaki.html">The Politics of Hayao Miyazaki's Cinema</a></li>
 					  			<li><a href="texts/siryalove.html">Film Review: A Syrian Love Story</a></li>
