--- a/esp/cat.html
+++ b/esp/cat.html
@@ -6,14 +6,15 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>La cuestión catalana</title>
 	<div class="container">
 	<h2 class="header">La Cuestión Catalana</h2>
+	<i>Septiembre 2017</i><br><br>
 	<p class="main">
 
-		Lo que motiva la redacción de este artículo es la exasperación que me produce la falta de una lectura inteligente y valiente sobre la situación política que se está dando en Catalunya en los últimos años, y que tan tensa está ahora mismo. </p>
+		Lo que motiva la redacción de este artículo es la exasperación que me produce la falta de lecturas inteligente y valiente sobre la situación política que se está dando en Catalunya en los últimos años, y que tan tensa está ahora mismo. </p>
 		<p class="main"> He nacido y crecido en Barcelona, ciudad a la que amo, pero soy hijo de inmigrantes que a su vez son de distintas nacionalidades, por lo que en mi configuración mental no hay ningún tipo de orgullo patriótico, ni español ni catalán ni de otro tipo. Además, he sido educado en la izquierda, en el amor a la democracia por supuesto, pero más importantemente, en el pensamiento crítico y el rechazo de las tendencias corruptas y corrompedoras del poder. Creo que estas características hacen que pueda reflexionar sobre la situación que se está dando en Catalunya con una cierta imparcialidad que me permite no tomar lados—sino es el de la lucha por un mundo mejor para todos. </p>
 		<p class="main"> Quiero empezar trayendo a colación el que para mí fue un año crucial del panorama político en que nos encontramos: 2011. En ese año, no solo en Catalunya o España, sino prácticamente en el mundo entero, hubo levantamientos contra la tiranía de unos gobiernos que no eran sino marionetas de instituciones internacionales (como el FMI o el BCE) encargadas de asegurar la hegemonía del mundo financiero, continuando así con el proyecto del neoliberalismo global como única opción, sin importar que hubiera causado la que es quizá la mayor crisis económica de la historia mundial, y sin tener consideración alguna por los costes humanos. Lo más bonito de ese momento (y esto lo recordarán bien aquellos que estuvieron presentes en el 15m), es que había un sentimiento de hermandad que iba por encima de cualquier división identitaria a la que estamos acostumbrados. Cristiano o musulmán, viejo o joven, funcionario o artista, español o catalán; nada de eso importaba. Lo que importaba era que todos éramos capaces de ver como las obcecadas elites que nos gobiernan se mofaban de nuestros derechos, aprobando leyes que aseguraban la precarización de la vida del grueso de la sociedad casi sin pestañear, y además, robando sin vergüenza. En ese rechazo encontramos unidad. </p>
 		<p class="main"> Recordarán algunos también que aquel ciclo de protesta no logró canalizarse en un proyecto que pudiera entrar en el juego de la democracia representativa para tomar las riendas del estado. Pero esto es solo algo positivo: aquella gloriosa exhibición de ganas de cambio y fuerza para exigir justicia no quería, ni podía, encajar en las reglas de juego existentes (¿Quién se acuerda de la tranquilidad con la que altos cargos del PP y del PSOE respondían a los que les preguntaban sobre las concentraciones, “que se presenten a las elecciones, para eso está la democracia”?)
@@ -38,7 +39,7 @@
     	<p class="main"> Luca Dobry <br>
 		Septiembre 2017 </p>
 		<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 	</ul>
 		</div>
 
