--- a/texts/2011p3.html
+++ b/texts/2011p3.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 	<title>Remember 2011</title>
 	<div class="container">
 		<h2 class="header">Remember 2011. The Importance of a Year of Global Uprisings.</h2>
@@ -34,9 +34,9 @@
 			<p class="main"> Some years later, the social unrest that had led to the rise of these protests has degenerated into reactionary politics, but this might be seen as just one of the many signals that the global project of neoliberalism is in decay. Seeing the stagnation that the political class is showing, when future crisis—whether economic, military or environmental—happen, as they will inevitably do, we must come up with alternatives in order to be prepared and deploy them. The time is ripe for change, we must be both ambitious and patient. Regardless of ehther or not we achieve in providing useful ideas for the future, what is important now is that we encourage ourselves in thinking, imagining and speaking of possibilities and alternatives. Let us not be afraid by the difficulty of the task, let us make of that difficulty our motivating challenge. </p>
 
 	<ul class="ref" style="list-style: none;">
-		<li><a href="2011p1.html">Chapter 1: 2011 & The Rebirth of History</a></li> 
-		<li><a href="2011p2.html">Chapter 2: The New Ethos of Resistance</a></li>
-		<li><a href="../index.html">home</a></li>
+		<li><a href="2011p1.html">&larr; chapter 1: 2011 & The Rebirth of History</a></li> 
+		<li><a href="2011p2.html">&larr; chapter 2: The New Ethos of Resistance</a></li>
+		<li><a href="../index.html">&#9788; back to articles & essays</a></li>
 		</ul>
 	</div>
 </head>
