--- a/texts/blackout.html
+++ b/texts/blackout.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Montserrat|merryweather" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>blackout</title>
 	<div class="container">
@@ -53,7 +53,7 @@
 	<p class="main"> She opened the window in the bedroom and climbed onto the frame. She looked down at the pavement, it was a certain death. How sweet, to go right now, to not be here to witness the world going nuts. She took a deep breath and prepared to let go. On the verge of jumping, she heard a familiar sound that transfixed her for a moment. And then again, and again. DING, DING, DING. It was her phone. She got off the window and got it back out from her purse. It was exploding with tons of likes, messages and notifications all piling on her home screen. She unlocked the phone with her thumb, and hurried onto Instagram. Her profile was back as it was the day before. On the feed, she saw a selfie of @lunamooney looking fabulous in a cocktail dress. She commented a bunch of smiley faces with hearts instead of eyes. Upon noticing everyone was using the same hashtag, she arranged her hair lightly and took a picture covering her chest with her left arm and wrote the same thing: #blackoutglowout. A text from @fairymimi popped up: there’s a party at Chanel headquarters, come babe! She smiled, and a tear of pure joy rolled out of her eye. </p>
 
 	<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 	</ul>
 	</div>
 
