--- a/texts/cerveza0.html
+++ b/texts/cerveza0.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>Cerbeza Beer Amigo</title>
 	<div class="container">
@@ -33,7 +33,7 @@
 		Masala.cat, (2012). Limpiar la imagen de Estrella Damm degradando la de los lateros [online] Available at: http://masala.cat/ limpiar-la-imagen-de-estrella-damm-degradando-la-de-los-lateros/ [Accessed 25 Feb. 2016]. (This is an article in Spanish talking about an anti-street-sellers campaign’s video that the company produced in cooperation with the city council. I wasn’t able to find the video online but on the article we can see some screenshots, the first of them shows the hand of a seller coming out of a garbage container, clearly representing the seller as garbage.)
 		
 		<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 		</ul>
 
 	</div>
