--- a/texts/otherness.html
+++ b/texts/otherness.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>Otherness</title>
 	<div class="container">
@@ -18,7 +18,7 @@
 	<p class="main"> How IR theory and practice treat otherness should be a central issue in the present globalized world. If IR’s aim is to successfully manage global governance and foresee its conflicts, it must realize how much a certain identity is input into its theory; IR theory claims to be founded upon universal values, but many of the assumptions made by mainstream IR theory are the product of a particular set of values, and for this it has received the critique of being Eurocentric. If IR is Eurocentric, then it has marginalized all otherness to the place where it first did in the colonial times, that of the ignorant, the impure, the violent, and ultimately, that of lack. If IR can instead be founded upon the contemplation and embracement (not tolerance) of otherness, then it might be more successful at achieving its objectives. </p>
 
 	<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 	</ul>
 	</div>
 </head>
