--- a/texts/siryalove.html
+++ b/texts/siryalove.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>A Syrian Love Story</title>
 	<div class="container">
@@ -28,7 +28,7 @@
 	<p class="main"> Even if this very notion of having to realize that they are human too is quite embarrassing, in a time where the media depicts the horrors happening in Syria and the fleeing refugees in such a dehumanized way, this document is of capital importance. It teaches us that no matter the place of origin, all human lives matter, because we all feel and suffer in the same way. </p>
 
 	<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 	</ul>
 
 		
