--- a/texts/2011p2.html
+++ b/texts/2011p2.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>Remember 2011</title>
 		<div class="container">
@@ -33,9 +33,9 @@
 			<p class="main"> The various occupations and encampmtents managed to bring together a broad range of people under similar banners of indignation at the system, not proposing a clearly outlined escape route from capitalism, but establishing its possibility. In the outrage they bred hope, and because they bred hope it made sense to be outraged. They posed a utopian vision of values and affects without formulating an ideology.  Zizek suggests that we should read the wave of protests of 2011 not in the classical social-scientific lens of finding its causalities and its consequent programmatic reforms but rather, precisely because of their unexpected character, as “signs from the future”. Far from conceiving the protests as being a revolutionary outburst that is embedded in the process of history, we should instead celebrate them for opening the possibility precisely of un-determining the future: future is not written, it is to be imagined: </p>
 			<p class="quote"> This requires difficult and patient work—of which the protests are the beginning, not the end. Their basic message is: the taboo has been broken, we do not live in the best possible world; we are allowed, obliged even, to think about alternatives. (Zizek, 2012: 77)</p>
 		<ul class="ref" style="list-style: none;">
-		<li><a href="2011p1.html">Chapter 1: 2011 & The Rebirth of History</a></li> 
-		<li><a href="2011p3.html">Chapter 3: The Prospects of Postcapitalism</a></li>
-		<li><a href="../index.html">home</a></li>
+		<li><a href="2011p1.html">&larr; chapter 1: 2011 & The Rebirth of History</a></li> 
+		<li><a href="2011p3.html">&rarr; chapter 3: The Prospects of Postcapitalism</a></li>
+		<li><a href="../index.html">&#9788; back to articles & essays</a></li>
 		</ul>
 
 
