--- a/texts/Scott.html
+++ b/texts/Scott.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>Book review</title>
 	<div class="container">
@@ -38,7 +38,7 @@
 	<p class="main"> MacFarlane Laurie. 2016. “Taking Control of RBS: People-Powered Banking that Puts Communities First” New Economics Foundation. </p>
 
 	<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 	</ul>
 
 	</div>
