--- a/texts/selfie.html
+++ b/texts/selfie.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli|Montserrat:500|Cousine" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 	<title>SelfieHyperrealism</title>
 	<div class="container">
@@ -46,7 +46,7 @@
 		<p class="main">- Digital cameras. Retrieved April 5, 2016, from http://www.explainthatstuff.com/digitalcameras.html</p>
 
 		<ul style="list-style: none">
-			<li><a href="../index.html">home</a></li>
+			<li><a href="../index.html">&larr; back</a></li>
 		</ul>
 
 
