--- a/about/about.html
+++ b/about/about.html
@@ -11,11 +11,11 @@
 	<title>about</title>
 	<div class="container">
 		<h5 class="subheader">About me</h5>
-		<img class="cv" src="../img/mecv3.jpg">
+		<img class="cv" src="../img/11.17.jpg">
 		<p class="main">Coming from Barcelona, I have been living in London for the past three years, in which I have completed my BA in International Studies at Goldsmiths, while working part-time jobs to maintain myself. My interest is in understanding the complexities of our current world and its history; my passion is in imagining the world of tomorrow and trying to come up with ways of walking towards it. I am looking for a meaningful work experience that will put my abilities to test and help me gain new ones. I am ready to give my best. </p>
-		<p class="main"> I am interested in politics and political philosophy, but also in culture and the arts. Although not absolutely, these two realms are currently mostly sealed off from each other,  undoubtedly at a loss for both of them. I find my generation has a great artistic drive in all creative fields such as music, fashion, photography, film, design etc. However, probably due to the lack of ideas on how to construct different futures, the creative power of youth at present is far too distant of an engagement regarding political issues. I wish to reunite the two fields by making politics atractive to the young and helping art to play a greater role in the possibilities that politics offer.
+		<p class="main">
 		</p>
-		<div class="main"><a href="cv2017new.pdf">Download my resume</a></div>
+		<div class="main"><a href="cv.pdf">Download my resume</a></div>
 		<ul style="list-style: none">
 			<li><a href="../index.html">&larr; back</a></li>
 	</ul>
@@ -25,3 +25,6 @@
 
 </body>
 </html>
+
+
+COPIAR ESTO EN EL INDEX CUANDO QUIERA VOLVER A PONER EL ABOUT: <a style="font-weight: bold;font-family: cousine" href="about/about.html">about me</a></li>
