--- a/texts/selfie.html
+++ b/texts/selfie.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115079366-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+gtag('config', 'UA-115079366-1');
+</script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
